Info, Other Categories

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "support"
     ],
     "contributors": [
+        "Nate (NTMNathan)",
         "WiseDevHelper <45759535+WiseDevHelper@users.noreply.github.com>",
         "Sanctuary <sanc.pw@gmail.com>",
         "dragonfire535 <danielbodendahl@gmail.com>",
